[package]
name = "helloskill-editor-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.24"
openai = {path= "./openai-1.0.0-alpha.18", version = "1.0.1-alpha"}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
